# langchain-course-udemy

./: README.md
Seção 02 - The GIST of LangChain/: .env.example  ice_breaker.py
secao-02_the-GIST-of-langchain/: README.me  ice_breaker.py  information.py  pyproject.toml
secao-03_ice-breaker/: .env.example  README.md  gist.py  ice_breaker.py  linkedin.py  pyproject.toml
section02/: .env.example  ice_breaker.py  pyproject.toml
