[project]
name = "section02"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "langchain>=0.3.21",
    "langchain-community>=0.3.20",
    "langchain-groq>=0.3.1",
    "langchainhub>=0.1.21",
    "loguru>=0.7.3",
    "python-dotenv>=1.0.1",
]
